--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     </head>
     <body>
         <div class="card">
-            <img class="avatar" src="images/per.png">
+            <img class="avatar" src="images/Samuel.jpg">
             <div >
-                <h3>Per Harald Borgen</h3>
+                <h3>Samuel Parente Ferraz Vieira Da Cunha</h3>
                 <p>Frontend Developer</p>
-                <h4>Oslo, Norway</h4>
+                <h4>Dublin, Ireland</h4>
             </div>
         </div>
     </body>
